syntax = "proto3";

package wres.statistics.generated;

import "metric_name.proto";
import "google/protobuf/duration.proto";

option java_package = "wres.statistics.generated";
option java_outer_classname = "DurationScoreMetricProto";
option java_multiple_files = true;

/* A message that encapsulates a score metric or scoring rule that produces a duration. */
message DurationScoreMetric
{
    // Metric name.
    MetricName name = 1;

    // The score components
    repeated DurationScoreMetricComponent components = 2;

    // A score component
    message DurationScoreMetricComponent
    {
        enum DurationScoreComponentName 
        {           
            UNKNOWN = 0; 
            MEAN = 1;
            MEDIAN = 2;
            MINIMUM = 3;
            MAXIMUM = 4;
            STANDARD_DEVIATION = 5;
            MEAN_ABSOLUTE = 6;
        }

        DurationScoreComponentName name = 1;

        // The optimum value of the score (e.g., 0.0 for the mean error in timing)
        google.protobuf.Duration optimum = 2; 

        // The lower bound of the score
        google.protobuf.Duration minimum = 3;
        
        // The upper bound of the score
        google.protobuf.Duration maximum = 4;
    }
}